erDiagram
  recipientes {
    uuid    id PK
    text    nome UK
    numeric volume_litros
    boolean ativo
  }
  insumos {
    uuid    id PK
    text    nome
    enum    categoria
    text    unidade_medida
    boolean ativo
  }
  protocolos {}
  lotes {}
  pedidos_itens {}
  atribuicoes {}

  recipientes ||--o| protocolos    : "define o manejo de"
  recipientes ||--o{ lotes         : "define o porte de"
  recipientes |o--o{ pedidos_itens : "define porte de"
  recipientes ||--o{ atribuicoes   : "e objeto de"
